# fastsocket

./: .gitattributes  README.md
Import/libevent/lib/pkgconfig/: libevent_core.pc  libevent_pthreads.pc
UDPClient/: SKYStreamDispatchFactory.cpp  UDPClient.cpp  UDPClient.vcxproj  UDPClient.vcxproj.filters
UDPServer/: CMakeLists.txt  ISKYStreamSession.h  SKYStreamServerFactory.cpp  SKYStreamServerFactory.h  UDPServer.cpp  UDPServer.h  UDPServer.vcxproj  UDPServer.vcxproj.filters
exmple/udpsvr/: CMakeLists.txt  UDPsvr.cpp
import/libevent/lib/: libevent.la  libevent_core.la  libevent_extra.la  libevent_openssl.la  libevent_pthreads.la
import/libevent/lib/pkgconfig/: libevent.pc  libevent_extra.pc  libevent_openssl.pc
udpclient/: CMakeLists.txt  Config.h.in  SKYStreamDispatchFactory.h  UDPClient.h  UDPClientSession.cpp  UDPClientSession.h
udpserver/: CMakeLists.txt  Config.h  Config.h.in  ISKYStreamDispatch.h  ISKYStreamServer.h  IStreamDispatch.h  IStreamServer.h  IStreamSession.h  SKYStreamServerFactory.h  UDPServer.cpp  UDPServer.h  UDPServerFactory.cpp  UDPServerFactory.h  UDPServerSession.cpp  UDPServerSession.h
